2000-02-17  Akim Demaille  <akim@epita.fr>

	* tests/semantics.m4 (AC_CHECK_TYPES): `addr, addr' is not
	portable sed: use `addr,addr'.

2000-02-17  Akim Demaille  <akim@epita.fr>

	Fix the `missing dummy.in' reported by the test suite.
	Reported by Erez Zadok.

	* tests/torture.m4 (config.status under extreme conditions):
	Reorganized.  Because files required by this test were created
	outside the pair AT_SETUP/AT_CLEANUP, when the test fails and
	autotest extracts this test, the `debug' script does not contain
	the files it needs.  Now AT_SETUP/AT_CLEANUP encloses the full
	auto contained section.

2000-02-16  Akim Demaille  <akim@epita.fr>

	* tests/actest.m4 (AC_ENV_SAVE): X_EXTRA_LIBS can be changed by
	AC_PATH_EXTRA.
	Reported by Erez Zadok.

2000-02-15  Akim Demaille  <akim@epita.fr>

	Define HAVE_DECL_FOO both to 1 if found and 0 otherwise.

	* acgeneral.m4 (AC_CHECK_DECLS): Define HAVE_DECL_FOO to 1 instead
	of NEED_FOO_DECL if found.  Define to 0 if not found.
	* autoheader.m4 (AC_CHECK_DECLS): Template HAVE_DECL_FOO.
	* tests/semantics.m4 (AC_CHECK_DECLS): Adjusted.
	* doc/autoconf.texi (Generic Declarations): Adjusted.

2000-02-15  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Generic Structures):
	s/AC_FATAL/AC_MSG_ERROR.

2000-02-15  Akim Demaille  <akim@epita.fr>

	autoreconf had a silly syntax error, test it and fix it.
	Reported by Franc,ois Pinard and Rainer Orth.

	* autoreconf.sh: Removed spurious `;;'.
	Formatting changes.
	* tests/tools.m4 (Syntax of the scripts): Run `sh -n' on all the
	shell scripts.

2000-02-15  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (options handling): --v* of --version was shadowing
	--verbose.

2000-02-11  Akim Demaille  <akim@epita.fr>

	* tests/torture.m4: Nuke the trailing space in defs.

2000-02-11  Akim Demaille  <akim@epita.fr>

	* tests/atspecific.m4: Really added to the CVS repository.

2000-02-11  Akim Demaille  <akim@epita.fr>

	Don't use `cat -s' to single out new-lines, it is not portable.